--- a/items/py10/templates/hou/public/base.html
+++ b/items/py10/templates/hou/public/base.html
@@ -204,7 +204,7 @@
             <!-- 菜单 -->
             <ul class="sidebar-nav">
                 <li class="sidebar-nav-link">
-                    <a href="index.html" class="active">
+                    <a href="{% url 'hou_hou' %}" class="active">
                         <i class="am-icon-home sidebar-nav-link-logo"></i> 首页
                     </a>
                 </li>
