--- a/py/templates/myhome/index.html
+++ b/py/templates/myhome/index.html
@@ -58,11 +58,13 @@
                 
                 <div class="category">
                     <ul class="category-list" id="js_climit_li">
+                    
+                    {% for v in typegoodslist %}
                         <li class="appliance js_toggle relative first">
                             <div class="category-info">
                                 <h3 class="category-name b-category-name">
                                     <i><img src="/static/myhome/images/cake.png"></i>
-                                    <a class="ml-22" title="点心">点心/蛋糕</a>
+                                    <a class="ml-22" >{{ v.name }}</a>
                                 </h3>
                                 <em>&gt;</em></div>
                             <div class="menu-item menu-in top">
@@ -70,14 +72,14 @@
                                     <div class="area-bg">
                                         <div class="menu-srot">
                                             <div class="sort-side">
+                                            {% for vv in v.sub %}
                                                 <dl class="dl-sort">
-                                                    <dt><span title="蛋糕">蛋糕</span></dt>
-                                                    <dd><a title="蒸蛋糕" href="#"><span>蒸蛋糕</span></a></dd>
+                                                    <dt><a href="{% url 'myhome_list' vv.id %}"><span>{{ vv.name }}</span></a></dt>
+                                                    {% for vvv in vv.goodssub %}
+                                                    <dd><a href="{% url 'myhome_info' vvv.id %}"><span>{{ vvv.title }}</span></a></dd>
+                                                    {% endfor %}
                                                 </dl>
-                                                <dl class="dl-sort">
-                                                    <dt><span title="蛋糕">点心</span></dt>
-                                                    <dd><a title="脱水蛋糕" href="#"><span>脱水蛋糕</span></a></dd>
-                                                </dl>
+                                            {% endfor %}
 
                                             </div>
                                         </div>
@@ -86,66 +88,10 @@
                             </div>
                         <b class="arrow"></b>   
                         </li>
-                        <li class="appliance js_toggle relative">
-                            <div class="category-info">
-                                <h3 class="category-name b-category-name"><i><img src="/static/myhome/images/cookies.png"></i><a class="ml-22" title="饼干、膨化">饼干/膨化</a></h3>
-                                <em>&gt;</em></div>
-                            <div class="menu-item menu-in top">
-                                <div class="area-in">
-                                    <div class="area-bg">
-                                        <div class="menu-srot">
-                                            <div class="sort-side">
-                                                <dl class="dl-sort">
-                                                    <dt><span title="饼干">饼干</span></dt>
-                                                    <dd><a title="蒸蛋糕" href="#"><span>蒸蛋糕</span></a></dd>
-                                                    <dd><a title="脱水蛋糕" href="#"><span>脱水蛋糕</span></a></dd>
-                                                    <dd><a title="瑞士卷" href="#"><span>瑞士卷</span></a></dd>
-                                                    <dd><a title="软面包" href="#"><span>软面包</span></a></dd>
-                                                    <dd><a title="马卡龙" href="#"><span>马卡龙</span></a></dd>
-                                                </dl>
-                                                <dl class="dl-sort">
-                                                    <dt><span title="薯片">薯片</span></dt>
-                                                    <dd><a title="蒸蛋糕" href="#"><span>蒸蛋糕</span></a></dd>
-                                                    <dd><a title="脱水蛋糕" href="#"><span>脱水蛋糕</span></a></dd>
-                                                    <dd><a title="瑞士卷" href="#"><span>瑞士卷</span></a></dd>
-                                                    <dd><a title="软面包" href="#"><span>软面包</span></a></dd>
-                                                    <dd><a title="马卡龙" href="#"><span>马卡龙</span></a></dd>
-                                                    <dd><a title="千层饼" href="#"><span>千层饼</span></a></dd>
-                                                    <dd><a title="甜甜圈" href="#"><span>甜甜圈</span></a></dd>
-                                                    <dd><a title="蒸三明治" href="#"><span>蒸三明治</span></a></dd>
-                                                    <dd><a title="铜锣烧" href="#"><span>铜锣烧</span></a></dd>
-                                                </dl>
-                                                <dl class="dl-sort">
-                                                    <dt><span title="蛋糕">虾条</span></dt>
-                                                    <dd><a title="蒸蛋糕" href="#"><span>蒸蛋糕</span></a></dd>
-                                                    <dd><a title="脱水蛋糕" href="#"><span>脱水蛋糕</span></a></dd>
-                                                    <dd><a title="瑞士卷" href="#"><span>瑞士卷</span></a></dd>
-                                                    <dd><a title="软面包" href="#"><span>软面包</span></a></dd>
-                                                    <dd><a title="马卡龙" href="#"><span>马卡龙</span></a></dd>
-                                                    <dd><a title="千层饼" href="#"><span>千层饼</span></a></dd>
-                                                    <dd><a title="甜甜圈" href="#"><span>甜甜圈</span></a></dd>
-                                                    <dd><a title="蒸三明治" href="#"><span>蒸三明治</span></a></dd>
-                                                    <dd><a title="铜锣烧" href="#"><span>铜锣烧</span></a></dd>
-                                                </dl>
-                                            </div>
-                                            <div class="brand-side">
-                                                <dl class="dl-sort"><dt><span>实力商家</span></dt>
-                                                    <dd><a rel="nofollow" title="YYKCLOT" target="_blank" href="#" rel="nofollow"><span  class ="red" >YYKCLOT</span></a></dd>
-                                                    <dd><a rel="nofollow" title="池氏品牌男装" target="_blank" href="#" rel="nofollow"><span  class ="red" >池氏品牌男装</span></a></dd>
-                                                    <dd><a rel="nofollow" title="男装日志" target="_blank" href="#" rel="nofollow"><span >男装日志</span></a></dd>
-                                                    <dd><a rel="nofollow" title="索比诺官方旗舰店" target="_blank" href="#" rel="nofollow"><span >索比诺官方旗舰店</span></a></dd>
-                                                    <dd><a rel="nofollow" title="onTTno傲徒" target="_blank" href="#" rel="nofollow"><span  class ="red" >onTTno傲徒</span></a></dd>
-                                                    <dd><a rel="nofollow" title="玛狮路男装旗舰店" target="_blank" href="#" rel="nofollow"><span >玛狮路男装旗舰店</span></a></dd>
-                                                    <dd><a rel="nofollow" title="劳威特品牌男装" target="_blank" href="#" rel="nofollow"><span >劳威特品牌男装</span></a></dd>
-                                                    <dd><a rel="nofollow" title="卡斯郎世家批发城" target="_blank" href="#" rel="nofollow"><span  class ="red" >卡斯郎世家批发城</span></a></dd>
-                                                </dl>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                         <b class="arrow"></b>
-                        </li>
+                    {% endfor %}
+
+                  
+              
                     </ul>
                 </div>
             </div>
@@ -159,133 +105,42 @@
     <div class="shopMainbg">
 
         <div class="shopMain" id="shopmain">
-            <div class="clear "></div>
-            <div id="f1">
-            <!--甜点-->
-            <div class="am-container ">
-                <div class="shopTitle ">
-                    <h4>甜品</h4>
-                    <h3>每一道甜品都有一个故事</h3>
-                    <div class="today-brands ">
-                        <a href="# ">桂花糕</a>
-                        <a href="# ">奶皮酥</a>
-                        <a href="# ">栗子糕 </a>
-                        <a href="# ">马卡龙</a>
-                        <a href="# ">铜锣烧</a>
-                        <a href="# ">豌豆黄</a>
+        
+            {% for v in erdata %}
+                <div class="clear "></div>
+                <div id="f{{forloop.counter}}">
+                    <!--甜点-->
+                    <div class="am-container ">
+                        <div class="shopTitle ">
+                            <h4>{{ v.name }}</h4>
+                            <span class="more ">
+                            <a href="{% url 'myhome_list' v.id %}">更多美味<i class="am-icon-angle-right" style="padding-left:10px ;" ></i></a>
+                            </span>
+                        </div>
                     </div>
-                    <span class="more ">
-            <a href="# ">更多美味<i class="am-icon-angle-right" style="padding-left:10px ;" ></i></a>
-                </span>
-                </div>
-            </div>
-            
-            <div class="am-g am-g-fixed floodFour">
-                <div class="am-u-sm-5 am-u-md-4 text-one list ">
-                    <div class="word">
-                        <a class="outer" href="#"><span class="inner"><b class="text">核桃</b></span></a>
-                        <a class="outer" href="#"><span class="inner"><b class="text">核桃</b></span></a>
-                        <a class="outer" href="#"><span class="inner"><b class="text">核桃</b></span></a> 
-                        <a class="outer" href="#"><span class="inner"><b class="text">核桃</b></span></a>
-                        <a class="outer" href="#"><span class="inner"><b class="text">核桃</b></span></a>
-                        <a class="outer" href="#"><span class="inner"><b class="text">核桃</b></span></a>                                 
-                    </div>
-                    <a href="# ">
-                        <div class="outer-con ">
-                            <div class="title ">
-                            开抢啦！
+                    <div class="am-g am-g-fixed floodFour">
+                        {% for vv in v.goodssub %}
+                            <div class="am-u-sm-3 am-u-md-2 text-two">
+                                <div class="outer-con ">
+                                    <div class="title ">
+                                        {{ vv.title }}
+                                    </div>
+                                    <div class="sub-title ">
+                                        ¥{{ vv.price }}
+                                    </div>
+                                    <i class="am-icon-shopping-basket am-icon-md  seprate"></i>
+                                </div>
+                                <a href="{% url 'myhome_info' vv.id %}" ><img style="width: 180px;height: 180px;" src="{{ vv.pics }}" /></a>
                             </div>
-                            <div class="sub-title ">
-                                零食大礼包
-                            </div>                                  
-                        </div>
-                          <img src="/static/myhome/images/act1.png " />                             
-                    </a>
-                    <div class="triangle-topright"></div>                       
+                        {% endfor %}
+                    </div>
                 </div>
-                
-                    <div class="am-u-sm-7 am-u-md-4 text-two sug">
-                        <div class="outer-con ">
-                            <div class="title ">
-                                雪之恋和风大福
-                            </div>                                  
-                            <div class="sub-title ">
-                                ¥13.8
-                            </div>
-                            <i class="am-icon-shopping-basket am-icon-md  seprate"></i>
-                        </div>
-                        <a href="# "><img src="/static/myhome/images/2.jpg" /></a>
-                    </div>
-
-                    <div class="am-u-sm-7 am-u-md-4 text-two">
-                        <div class="outer-con ">
-                            <div class="title ">
-                                雪之恋和风大福
-                            </div>
-                            <div class="sub-title ">
-                                ¥13.8
-                            </div>
-                            <i class="am-icon-shopping-basket am-icon-md  seprate"></i>
-                        </div>
-                        <a href="# "><img src="/static/myhome/images/1.jpg" /></a>
-                    </div>
+            {% endfor %}
 
 
-                <div class="am-u-sm-3 am-u-md-2 text-three big">
-                    <div class="outer-con ">
-                        <div class="title ">
-                            小优布丁
-                        </div>
-                        <div class="sub-title ">
-                            ¥4.8
-                        </div>
-                        <i class="am-icon-shopping-basket am-icon-md  seprate"></i>
-                    </div>
-                    <a href="# "><img src="/static/myhome/images/5.jpg" /></a>
-                </div>
-
-                <div class="am-u-sm-3 am-u-md-2 text-three sug">
-                    <div class="outer-con ">
-                        <div class="title ">
-                            小优布丁
-                        </div>
-                        <div class="sub-title ">
-                            ¥4.8
-                        </div>
-                        <i class="am-icon-shopping-basket am-icon-md  seprate"></i>
-                    </div>
-                    <a href="# "><img src="/static/myhome/images/3.jpg" /></a>
-                </div>
-
-                <div class="am-u-sm-3 am-u-md-2 text-three ">
-                    <div class="outer-con ">
-                        <div class="title ">
-                            小优布丁
-                        </div>
-                        <div class="sub-title ">
-                            ¥4.8
-                        </div>
-                        <i class="am-icon-shopping-basket am-icon-md  seprate"></i>
-                    </div>
-                    <a href="# "><img src="/static/myhome/images/4.jpg" /></a>
-                </div>
-
-                <div class="am-u-sm-3 am-u-md-2 text-three last big ">
-                    <div class="outer-con ">
-                        <div class="title ">
-                            小优布丁
-                        </div>
-                        <div class="sub-title ">
-                            ¥4.8
-                        </div>
-                        <i class="am-icon-shopping-basket am-icon-md  seprate"></i>
-                    </div>
-                    <a href="# "><img src="/static/myhome/images/5.jpg" /></a>
-                </div>
-
-            </div>
-            <div class="clear "></div>  
         </div>
+
+
         
          
         <div class="footer ">
